--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "gmail-send": "^1.2.6",
     "hashids": "^1.1.1",
     "jwt-simple": "^0.5.0",
     "mocha": "^3.1.2",
